<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/primary_light">
    <TextView
        android:text="@string/welcome"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:scaleType="center"
        android:background="@color/primary_dark"
        android:contentDescription="@string/app_name"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/primary_light"/>

    <TextView
        android:text="@string/welcome_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_margin="10dp"
        android:textSize="18sp"/>
</LinearLayout>