<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:background="@drawable/list_border"
              android:id="@+id/locationItem">

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:srcCompat="@drawable/ic_place_black_24dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="15dp"
        android:id="@+id/locationIcon"
        android:alpha="0.5"
        android:contentDescription="@string/go_to_map" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:id="@+id/locationDescription">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceListItem"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:id="@+id/locationName" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-2dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:id="@+id/locationDetails" />

    </LinearLayout>

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:srcCompat="@drawable/ic_create_black_24dp"
        android:id="@+id/locationEdit"
        android:layout_gravity="end|center_vertical"
        android:layout_marginEnd="10dp"
        android:alpha="0.5"
        android:contentDescription="@string/edit_location" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:srcCompat="@drawable/ic_delete_black_24dp"
        android:id="@+id/locationRemove"
        android:layout_gravity="end|center_vertical"
        android:layout_marginEnd="10dp"
        android:alpha="0.5"
        android:contentDescription="@string/remove_location" />

</LinearLayout>
