<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/activity_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="us.cognice.secrets.LocationActivity">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/saveLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_done_white_24dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="25dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/cancelLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:srcCompat="@drawable/ic_clear_white_24dp"
        android:layout_marginEnd="94dp"
        android:layout_marginBottom="25dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <FrameLayout
            android:id="@+id/locationMap"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.45"
            >
        </FrameLayout>

        <ImageView
            android:layout_width="match_parent"
            app:srcCompat="@color/divider"
            android:id="@+id/divider"
            android:layout_height="1dp"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.55"
            android:background="@android:color/white">

                <TextView
                    android:text="Latitude: 10.123. Longitude: 10.123"
                    android:layout_height="25dp"
                    android:id="@+id/coordinates"
                    android:layout_width="match_parent"
                    android:gravity="center_vertical|center_horizontal"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/menu_border"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp">

                <Switch
                    android:text="@string/switch_location_active"
                    android:layout_width="match_parent"
                    android:id="@+id/showOnMap"
                    android:textSize="16sp"
                    android:switchTextAppearance="@android:style/TextAppearance.DeviceDefault"
                    android:layout_height="35dp"
                    android:textColor="@color/primary_text"
                    android:checked="true"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/menu_border"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp">

                <TextView
                    android:text="@string/location_name"
                    android:id="@+id/locationNameLabel"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:gravity="start|center_vertical"
                    android:textSize="16sp"
                    android:textColor="@color/primary_text"
                    android:layout_height="35dp"/>

                <EditText
                    android:layout_width="0dp"
                    android:inputType="textVisiblePassword"
                    android:imeOptions="actionDone"
                    android:id="@+id/locationName"
                    android:layout_weight="1"
                    android:hint="@string/location_name_hint"
                    android:background="@android:color/transparent"
                    android:layout_height="35dp"
                    android:textSize="16sp"/>


            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/menu_border">

                <TextView
                    android:text="@string/radius"
                    android:id="@+id/radiusLabel"
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:gravity="start|center_vertical"
                    android:textSize="16sp"
                    android:textColor="@color/primary_text"
                    android:layout_height="35dp"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:id="@+id/radius"
                    android:layout_weight="0.4"
                    android:text="5 m"
                    android:textColor="@color/primary_text"
                    android:textSize="16sp"/>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_keyboard_arrow_right_black_24dp"
                    android:id="@+id/radiusEditButton"
                    android:layout_weight="0.1"
                    android:alpha="0.5"
                    android:clickable="true"
                    />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/menu_border"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                >

                <TextView
                    android:text="Message"
                    android:id="@+id/locationMessageLabel"
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:gravity="start|center_vertical"
                    android:textSize="16sp"
                    android:textColor="@color/primary_text"
                    android:layout_height="35dp"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:id="@+id/locationMessage"
                    android:layout_weight="0.4"
                    android:textColor="@color/primary_text"
                    android:textSize="16sp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:gravity="center_vertical|start"/>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    app:srcCompat="@drawable/ic_keyboard_arrow_right_black_24dp"
                    android:id="@+id/messageEditButton"
                    android:layout_weight="0.1"
                    android:alpha="0.5"
                    android:clickable="true"
                    />


            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
